packages/isar_db/test/errors/property/unsupported_type.dart
// unsupported type

import 'package:isar_db/isar_db.dart';

@collection
class Model {
  late int id;

  late Set<String>? prop;
}
